--- a/assets/media.css
+++ b/assets/media.css
@@ -13,10 +13,13 @@
     width: 20%;
   }
 
-  .popular-cards .card {
-    width: 15%;
+  .popular-cards {
+    flex-wrap: wrap;
   }
 
+  .popular-cards .card {
+    width: 32%;
+  }
   .popular-cards .card img {
     width: 100%;
   }
@@ -28,9 +31,21 @@
   .activities .card img {
     width: 100%;
   }
+
+  header,
+  main {
+    width: 90% !important;
+  }
+
+  .footer-content {
+    width: 90% !important;
+  }
 }
 
 @media only screen and (max-width: 1439px) {
+  header, main {
+    width: 95% !important;
+  }
   header .middle {
     width: 66%;
   }
@@ -56,8 +71,11 @@
   }
 }
 
-
 @media only screen and (max-width: 1500px) {
+  .hero-search {
+    width: 70.43%;
+  }
+
   .footer-content {
     flex-wrap: wrap;
     padding: 4.5rem 0rem;
@@ -70,25 +88,12 @@
   .footer-brand {
     margin-top: 4rem;
     width: 50%;
-
   }
 
   .footer-subscribe {
     width: 100%;
     margin-top: 4rem;
   }
-
-  header,
-  main {
-    width: 85% !important;
-  }
-
-  .footer-content {
-    width: 85% !important;
-  }
-
-
-
 }
 
 @media only screen and (max-width: 1240px) {
@@ -97,22 +102,25 @@
   }
 
   .footer-subscribe {
-    width: 32%;
+    width: 40%;
+  }
+
+  .subscribe-form {
+    width: 100%;
   }
 }
 
 @media only screen and (max-width: 1160px) {
-
   header .middle {
     width: 73%;
   }
 
-  .hero-search {
-    padding: 0.01 !important;
+  header {
+    padding-top: 0.5rem;
   }
 
-  .search-button {
-    /* margin-right: 1rem; */
+  .hero-search {
+    padding: 0.01 !important;
   }
 
   .search-location,
@@ -158,10 +166,6 @@
     width: 100%;
   }
 
-  .animation img {
-    /* width: 10%; */
-  }
-
   .hero-title h1 {
     font-size: 2.4rem;
   }
@@ -177,14 +181,8 @@
     width: 70%;
   }
 
-
-
   .hero-button {
     padding: 1rem 0rem !important;
-  }
-
-  .footer-subscribe {
-    width: 31%;
   }
 
   .footer-content {
@@ -193,10 +191,11 @@
 }
 
 @media only screen and (max-width: 990px) {
-
-  .search-button,
+  .search-button {
+    padding: 1.3rem;
+  }
   .subscribe-button {
-    padding: 0.7rem !important;
+    padding: 1.3rem !important;
   }
 
   .middle {
@@ -232,7 +231,9 @@
     order: 1;
   }
 
-  .footer-brand img {
+  .subscribe input {
+  }
+  .footer-logo {
     margin-left: 1.3rem;
   }
 
@@ -258,360 +259,480 @@
   .footer-subscribe {
     width: 40%;
   }
-}
-
-@media only screen and (max-width: 866px) {
-  .main-background {
-    padding-bottom: 2rem !important;
-  }
-
-  .hero-title h1 {
-    font-size: 2rem;
-  }
-
-  .hero-search {
-    width: 90%;
-  }
-
-  .hero-search p {
-    font-size: 0.7rem !important;
-  }
-
-  .hero-button {
-    width: 33%;
-    margin-bottom: 2rem !important;
-  }
-
-  .footer-content {
-    flex-wrap: wrap;
-  }
-
-  .footer-brand {
-    text-align: center;
-    margin: auto;
-    width: 80%;
-  }
-
-  .footer-social-media {
-    width: 20%;
-    text-align: center;
-    margin: auto;
-  }
-
-  .footer-links {
-    text-align: center;
-    margin: 3rem auto !important;
-    width: 80%;
-  }
-
-  .footer-column li {
-    width: 100%;
-    text-align: center;
-  }
-
-  .footer-subscribe,
-  .subscribe {
-    width: 80%;
-    text-align: center;
-    margin: 2rem auto !important;
-  }
-
-  .subscribe {
-    justify-content: space-between !important;
-  }
-
-  form {
-    width: 100%;
-  }
-
-  .content .right-side {
-    width: 100% !important;
-  }
-
-  .content .left-side {
-    width: 100% !important;
-  }
-
-  .content video,
-  table {
-    margin: 1rem 0rem;
-    border-radius: 0.5rem !important;
-  }
-
-  table td {
-    padding: 0.5rem 0rem;
-  }
-
-  .content {
-    flex-wrap: wrap;
-  }
-
-  .popular-places td,
-  .popular-places th {
-    padding-left: 1rem !important;
-  }
-}
-
-@media only screen and (max-width: 600px) {
-  header .right-side {
-    width: 70%;
-  }
-
-  .hero-button {
-    width: 50%;
-    font-size: 1rem;
-  }
-
-  .hero-title h1 {
-    font-size: 1.5rem;
-  }
-
-  .hero-title {
-    margin-top: 4rem !important;
-  }
-
-  .popular-destinations p {
-    font-size: 0.7rem;
-  }
-
-  .popular-destinations h2 {
-    margin-bottom: 2rem;
-  }
-
-  table {
-    font-size: 0.8rem;
-  }
-
-  .title {
-    margin-bottom: 2rem;
-  }
-
-  .about-section {
-    flex-wrap: wrap;
-  }
-
-  .about-section .right-side {
-    display: none !important;
-  }
-
-  .footer-content {
-    padding: 1rem 0rem !important;
-  }
-
-  .about-section {
-    text-align: center;
-  }
-
-  .about-section h2 {
-    margin: auto;
-  }
-
-  .about-section .view {
-    margin: auto;
-  }
-
-  .popular-destinations {
-    margin: 2rem 0rem;
-  }
-
-  .content .right-side {
-    width: 100% !important;
-  }
-
-  .content .left-side {
-    width: 100% !important;
-  }
-
-  .content video,
-  table {
-    margin: 1rem 0rem;
-    border-radius: 0.5rem !important;
-  }
-
-  table td {
-    padding: 0.5rem 0rem;
-  }
 
-  .content {
-    flex-wrap: wrap;
+  @media only screen and (max-width: 866px) {
+    .main-background {
+      padding-bottom: 2rem !important;
+    }
+
+    .hero-title h1 {
+      font-size: 2rem;
+    }
+
+    .hero-search {
+      width: 90%;
+    }
+
+    .hero-search p {
+      font-size: 0.7rem !important;
+    }
+
+    .hero-button {
+      width: 40%;
+      margin-bottom: 2rem !important;
+    }
+    .cards {
+      flex-wrap: wrap;
+    }
+    .activities .card {
+      width: 48.5%;
+    }
+
+    .title {
+      margin: 0rem;
+    }
+    .popular-destinations h2, .activities .title {
+      margin-bottom: 2rem;
+    }
+    .footer-content {
+      flex-wrap: wrap;
+    }
+
+    .footer-brand {
+      text-align: center;
+      margin: auto;
+      width: 80%;
+    }
+
+    .footer-social-media {
+      width: 40%;
+      text-align: center;
+      margin: auto;
+    }
+
+    .footer-links {
+      text-align: center;
+      margin: 3rem auto !important;
+      width: 80%;
+    }
+
+    .footer-column li {
+      width: 100%;
+      text-align: center;
+    }
+
+    .footer-subscribe,
+    .subscribe {
+      width: 80%;
+      text-align: center;
+      margin: 2rem auto !important;
+    }
+
+    .subscribe {
+      justify-content: space-between !important;
+    }
+
+    form {
+      width: 100%;
+    }
+
+    .content .right-side {
+      width: 100% !important;
+    }
+
+    .content .left-side {
+      width: 100% !important;
+    }
+
+    .content video,
+    table {
+      margin: 1rem 0rem;
+      border-radius: 0.5rem !important;
+    }
+
+    table td {
+      padding: 0.5rem 0rem;
+    }
+
+    .content {
+      flex-wrap: wrap;
+    }
+
+    .popular-places td,
+    .popular-places th {
+      padding-left: 1rem !important;
+    }
+  }
+
+  @media only screen and (max-width: 600px) {
+    header .right-side {
+      width: 70%;
+    }
+
+    .hero-button {
+      width: 50%;
+      font-size: 1rem;
+    }
+
+    .hero-title h1 {
+      font-size: 1.5rem;
+    }
+
+    .hero-title {
+      margin-top: 1rem !important;
+    }
+
+    .popular-destinations p {
+      font-size: 0.7rem;
+    }
+
+    .popular-destinations h2 {
+      margin-bottom: 2rem;
+    }
+
+    table {
+      font-size: 0.8rem;
+    }
+
+    .title {
+      margin-bottom: 2rem;
+    }
+
+    .about-section {
+      flex-wrap: wrap;
+    }
+
+    .about-section .right-side {
+      display: none !important;
+    }
+
+    .footer-content {
+      padding: 0rem 0rem !important;
+    }
+
+    .about-section {
+      text-align: center;
+    }
+
+    .about-section h2 {
+      margin: auto;
+    }
+
+    .about-section .view {
+      margin: auto;
+    }
+
+    .popular-destinations {
+      margin: 2rem 0rem;
+    }
+
+    .content .right-side {
+      width: 100% !important;
+    }
+
+    .content .left-side {
+      width: 100% !important;
+    }
+
+    .content video,
+    table {
+      margin: 1rem 0rem;
+      border-radius: 0.5rem !important;
+    }
+
+    table td {
+      padding: 0.5rem 0rem;
+    }
+
+    .content {
+      flex-wrap: wrap;
+    }
+
+    .popular-cards .card {
+      width: 30%;
+      margin-bottom: 1rem;
+    }
+
+    .hero-search {
+      display: none;
+    }
+
+    .animation img {
+      width: 20%;
+      top: -2rem;
+    }
+
+    form {
+      margin: auto !important;
+    }
+
+    input {
+      padding: 1rem 0rem;
+    }
+
+    .footer-links .footer-column {
+      width: 100%;
+      margin-bottom: 1rem;
+    }
+
+    .footer-subscribe,
+    .subscribe {
+      width: 100%;
+      margin: 0rem auto;
+    }
+
+    .footer-column ul {
+      margin: auto;
+    }
+
+    .footer-links {
+      flex-wrap: wrap;
+      margin: 1rem auto !important;
+    }
+
+    .footer-social-media {
+      width: 50%;
+    }
+
+    .subscribe {
+      margin: auto;
+      width: 100%;
+    }
+
+    header .right-side .text,
+    header .right-side .profile-photo {
+      display: none;
+    }
+
+    header .right-side .menu-icon {
+      margin-top: 0rem;
+    }
+
+    header .right-side .menu-icon {
+      margin: 0rem !important;
+    }
+  }
+
+  @media only screen and (max-width: 680px) {
+    .hero-search {
+      display: none !important;
+    }
+    .seacrh-column {
+      display: block !important;
+    }
+  }
+
+  @media only screen and (max-width: 450px) {
+    header,
+    main {
+      width: 98% !important;
+    }
+    .hero-title h1 {
+      text-align: center;
+      margin: auto;
+      font-size: 1.2rem;
+    }
+
+    .hero-button {
+      width: 60%;
+      padding: 0.8rem 0rem !important;
+      text-align: center;
+    }
+
+    .hero-button img {
+      display: none;
+    }
+
+    .hero-search {
+      display: none;
+      padding: 0rem !important;
+    }
+
+    .animation img {
+    }
+
+    .popular-cards .card {
+      width: 49%;
+    }
+
+    .activities .cards {
+      flex-wrap: wrap;
+    }
+
+    .activities .card {
+      width: 49%;
+      margin-bottom: 1rem;
+      font-size: 0.7rem;
+    }
+
+    .about-section {
+      margin: 1rem auto;
+    }
+
+    header .right-side .profile-photo .photo {
+      width: 80%;
+    }
+
+    header p,
+    li {
+      font-size: 0.7rem;
+    }
+
+    header .left-side img {
+      width: 80%;
+    }
+
+    .about-section .left-side p {
+      font-size: 0.8rem !important;
+    }
+
+    .popular-places .view,
+    .activities .view,
+    .about-section .view {
+      border-radius: 0.2rem;
+    }
+
+    .title h2 {
+      font-size: 1.2rem !important;
+    }
+
+    .popular-places {
+      margin-bottom: 2rem;
+    }
+
+    .main-background {
+      border-radius: 0rem 0rem 0.6rem 0.6rem;
+    }
+  }
+
+  @media only screen and (max-width: 375px) {
+    .hero-title h1 {
+      font-size: 1rem;
+    }
+
+    .hero-button {
+      font-size: 0.8rem;
+      margin-bottom: 0.5rem !important;
+    }
+
+    .footer-subscribe,
+    .subscribe {
+      width: 100%;
+    }
+
+    .animation img {
+      width: 20%;
+    }
+  }
+
+  @media only screen and (max-width: 311px) {
+    .subscribe,
+    .title {
+      flex-wrap: wrap;
+    }
+    .subscribe-button {
+      margin-top: 0.5rem;
+      width: 100%;
+    }
+    .hero-title {
+      margin: 0.2rem 0rem !important;
+    }
+    form img {
+      display: none;
+    }
+
+    .animation img {
+      top: -4rem;
+    }
+
+    .activities .card {
+      width: 100%;
+      text-align: center;
+      font-size: 1rem;
+    }
+  }
+
+  @media only screen and (max-width: 270px) {
+    .discover {
+      display: none;
+    }
+
+    .mobile {
+      display: block !important;
+    }
+    .hero-button {
+      width: 80%;
+      padding: 0rem;
+    }
+
+    .content .right-side {
+      width: 100%;
+      overflow-x: scroll;
+    }
+
+    .footer-social-media {
+      width: 100%;
+    }
+
+    .title h2 {
+      width: 100%;
+      font-size: 1rem !important;
+      text-align: center;
+    }
+
+    .title {
+      justify-content: center !important;
+      margin-bottom: 0rem !important;
+    }
+
+    .popular-destinations h2 {
+      text-align: center;
+      font-size: 1rem !important;
+      justify-content: center !important;
+    }
+    .cards {
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    .popular-cards .card {
+      width: 100%;
+    }
+
+    .subscribe input {
+      padding-top: 1rem;
+      padding-bottom: 1rem;
+    }
+
+    .popular-places .view,
+    .activities .view,
+    .about-section .view {
+      background-color: white;
+    }
+
+    .card .bottom {
+      text-align: center;
+    }
+
+    .card {
+      text-align: center;
+    }
+    form {
+      padding-left: 0rem;
+    }
+
+    input {
+      display: flex;
+      align-items: center;
+      justify-content: space-around;
+    }
+
+    input::placeholder {
+      padding-left: 0.5rem;
+    }
   }
-
-  .cards {
-    flex-wrap: wrap;
-  }
-
-  .popular-cards .card {
-    width: 30%;
-    margin-bottom: 1rem;
-  }
-
-  .hero-search {
-    display: none;
-  }
-
-  .animation img {}
-
-  form {
-    margin: 0.2rem !important;
-  }
-
-  input {
-    padding: 1rem 0rem;
-  }
-
-  .footer-links .footer-column {
-    width: 100%;
-    margin-bottom: 1rem;
-  }
-
-  .footer-subscribe,
-  .subscribe {
-    width: 100%;
-    margin: 0rem auto;
-  }
-
-  .footer-column ul {
-    margin: auto;
-  }
-
-  .footer-links {
-    flex-wrap: wrap;
-    margin: 1rem auto !important;
-  }
-
-  .footer-social-media {
-    width: 50%;
-  }
-
-  .subscribe {
-    margin: auto;
-    width: 100%;
-  }
-
-  header .right-side .text,
-  header .right-side .profile-photo {
-    display: none;
-  }
-
-  header .right-side .menu-icon {
-    margin-top: 0rem;
-  }
-}
-
-@media only screen and (max-width: 450px) {
-  .hero-title h1 {
-    text-align: center;
-    margin: auto;
-    font-size: 1.2rem;
-  }
-
-  .hero-button {
-    width: 60%;
-    padding: 0.8rem 0rem !important;
-    text-align: center;
-  }
-
-  .hero-button img {
-    display: none;
-  }
-
-  .hero-search {
-    display: none;
-  }
-
-  .animation img {}
-
-  .popular-cards .card {
-    width: 45%;
-  }
-
-  .activities .cards {
-    flex-wrap: wrap;
-  }
-
-  .activities .card {
-    width: 45%;
-    margin-bottom: 1rem;
-    font-size: 0.7rem;
-  }
-
-  .about-section {
-    margin: 1rem auto;
-  }
-
-  header .right-side .profile-photo .photo {
-    width: 80%;
-  }
-
-  header p,
-  li {
-    font-size: 0.7rem;
-  }
-
-  header .left-side img {
-    width: 80%;
-  }
-
-
-
-  .about-section .left-side p {
-    font-size: 0.8rem !important;
-  }
-
-  .popular-places .view,
-  .activities .view,
-  .about-section .view {
-    padding: 0.4rem;
-    border-radius: 0.2rem;
-  }
-
-  .title h2 {
-    font-size: 1.2rem !important;
-  }
-
-
-  .popular-places {
-    margin-bottom: 2rem;
-  }
-
-  .main-background {
-    border-radius: 0rem 0rem 0.6rem 0.6rem;
-  }
-}
-
-@media only screen and (max-width: 375px) {
-  .hero-title h1 {
-    font-size: 1rem;
-  }
-
-  .hero-button {
-    font-size: 0.8rem;
-    margin-bottom: 0.5rem !important;
-  }
-
-
-  .footer-subscribe,
-  .subscribe {
-    width: 100%;
-  }
-
-
-
-  .animation img {}
-
-  .activities .card {
-    width: 48%;
-  }
-}
-
-/* @media only screen and (max-width: 290px) {
 
-  .search-button,
   .subscribe-button {
-    padding: 0.3rem !important;
+    padding: 0.6rem;
   }
-
-  .title h2 {
-    font-size: 0.9rem !important;
-  }
-} */
+}
